# qesbr-heavy-truck-policy-daily

./: .env.example  .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml  requirements.txt
.github/workflows/: adapter-verification.yml  audit-sources.yml  backfill-july-15-22.yml  daily.yml  deploy-pages.yml  first-dry-run.yml  manual.yml  monthly.yml  source-canaries.yml  weekly.yml
config/: categories.yaml  settings.yaml  sources.yaml  tags.yaml
data/: manifest.json  search-index.json  sources.json
data/daily/: daily-2026-07-15.json  daily-2026-07-16.json  daily-2026-07-17.json  daily-2026-07-18.json  daily-2026-07-19.json  daily-2026-07-20.json  daily-2026-07-21.json  daily-2026-07-22.json  daily-2026-07-23.json  daily-2026-07-24.json
data/intelligence/leads/: 2026-07-23.json
data/intelligence/official/: 2026-07-23.json
data/processed/: 2026-07-22.json
data/raw/: 2026-07-22.json  2026-07-23.json
data/weekly/: weekly-2026-07-22.json
private-config-template/: README.md  recipients.yaml
scripts/: check_source_canaries.py  summarize_audit.py
site/: index.html
site/assets/: app.js  overrides.css  styles.css
src/policy_daily/: __init__.py  backfill.py  config.py  deduplicator.py  emailer.py  intelligence_store.py  main.py  models.py  processor.py  reports.py  screening.py  site_builder.py  utils.py
src/policy_daily/collectors/: __init__.py  api.py  base.py  browser.py  html_list.py  official.py  rss.py  wechat.py
tests/: test_audit_summary.py  test_browser_collector.py  test_core.py  test_intelligence.py  test_pipeline.py
